# holo-wechat-mpskills

./: .gitignore  CHANGELOG.md  LICENSE  README.md  openclaw.plugin.json  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
examples/: README.md
examples/articles/agent-skills-packaging/: README.md  article.md
examples/articles/ci-quality-baseline/: README.md  article.md
examples/articles/wechat-draft-workflow/: README.md  article.md
plugins/holo-wechat-mp/: openclaw.plugin.json
plugins/holo-wechat-mp/.claude-plugin/: plugin.json
plugins/holo-wechat-mp/.codex-plugin/: plugin.json
registry/: hermes.md  openclaw.md  well-known-template.json
skills/wechat-mp-illustrate/: SKILL.md
skills/wechat-mp-illustrate/references/: provider.md
skills/wechat-mp-illustrate/scripts/: api.py  illustrate.py  illustrator.py  models.py  prompts.py  requirements.txt
skills/wechat-mp-manage/: SKILL.md
skills/wechat-mp-manage/references/: api_reference.md  error_codes.md
skills/wechat-mp-manage/scripts/: __init__.py  draft_manager.py  html_submitter.py  manage.py  material_manager.py  stats_manager.py  submit_html_draft.py  wechat_client.py
skills/wechat-mp-publish/: SKILL.md
skills/wechat-mp-typeset/: SKILL.md
src/holo_wechat_wpskills/: __init__.py  build.py  example_draft.py  sync_plugin.py  validate.py
tests/: conftest.py  test_repository_layout.py  test_typeset_quality.py  test_wechat_illustrate_api.py  test_wechat_manage_api.py  test_wechat_manage_cli.py
(+11 files in other folders)
